Various fixes, Theme support Fixed readme Fixed controls Fixed icons Fixed sass issues Updated packages

--- a/styles/pages/landing.scss
+++ b/styles/pages/landing.scss
@@ -1,5 +1,16 @@
 @use "@/styles/components/global.scss" as *;
 
+[data-bs-theme="dark"] {
+    
+    .background-wrap {
+
+        img {
+            opacity: 0.25!important;
+        }
+    }
+
+}
+
 .ice-slide-landing-page {
     flex-grow: 1;
     display: flex;
